--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
 				socket.on('connect',function() {
 					console.log('connected to server!');
 					// send join_room event right after connect socket
-					socket.emit('join_room');
+					socket.emit('listening');
 				});
 				socket.on('msg', function(data) {
 					console.log('received message!');
