--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
 				});
 				socket.on('msg', function(data) {
 					console.log('received message!');
-					$("#output").prepend('<li>'+data.msg+'</li>');
+					$("#output").prepend('<li>'+data['value']+'</li>');
 				});
 			});
 		</script>
